# OpenGl-C

./: CMakeLists.txt
src/: buffer.c  buffer.h  glad.c  main.c  model_loader.c  model_loader.h  utils.c  utils.h
src/shader/: fragment.shader  shader.c  shader.h  vertex.shader
